# ai-research-agent

./: .gitignore  package.json  pnpm-lock.yaml  turbo.json
.turbo/cache/: 19a11c390ddb0281-meta.json  1dc24806e2c252a7-meta.json  20b9a50bb962d807-meta.json  29e9dfb29df4e0a9-meta.json  3919c9f395fa8e6e-meta.json  3919c9f395fa8e6e.tar.zst  4d3ce5446d253eb5-meta.json  4d3ce5446d253eb5.tar.zst  5d9948aa19d9d3c7-meta.json  5d9948aa19d9d3c7.tar.zst  6498159337941382-meta.json  8160cc620c9ac37a-meta.json  8160cc620c9ac37a.tar.zst  f552d9c50bceb94b-meta.json  f552d9c50bceb94b.tar.zst  fa93004a3401d8d0-meta.json  fa93004a3401d8d0.tar.zst  fd103c12e12e33e7-meta.json  fd103c12e12e33e7.tar.zst
apps/backend/: pyproject.toml  requirements.txt  start.sh
apps/backend/app/: main.py  research_agent.py
apps/backend/research_agent_backend/: init.py  main.py
apps/web/: .prettierignore  eslint.config.js  next.config.js  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.ts  vitest.setup.ts
apps/web/src/app/: globals.css  layout.test.tsx  layout.tsx  page.test.tsx  page.tsx
apps/web/src/components/: research-interface.tsx
apps/web/src/lib/: api.ts
